test(integration): simplifica AuditAspectTest usando H2 e ActiveProfiles
- Substitui Testcontainers por H2 in-memory para rodar testes mais rapidamente
- Configura perfil "test" para garantir isolamento e uso independente de Docker
- Atualiza pom.xml com plugins Surefire e Failsafe para separar testes unitários e de integração
- Ajusta comentários e validações nos testes para melhorar legibilidade