@@ -8,45 +8,22 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.http.*;
-import org.springframework.test.context.DynamicPropertyRegistry;
-import org.springframework.test.context.DynamicPropertySource;
-import org.testcontainers.containers.PostgreSQLContainer;
-import org.testcontainers.junit.jupiter.Container;
-import org.testcontainers.junit.jupiter.Testcontainers;
-
+import org.springframework.test.context.ActiveProfiles;
 import java.util.List;
-
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
- * Teste de integração end-to-end da auditoria.
+ * Teste de integração da auditoria end-to-end.
  *
- * Usa Testcontainers para subir um PostgreSQL real (igual ao de produção),
- * garantindo que tanto o AuditLog (AOP) quanto as tabelas _aud (Envers)
- * funcionem corretamente.
+ * Usa H2 in-memory (perfil "test") + RANDOM_PORT para subir um servidor
+ * HTTP real, garantindo que o RequestContextHolder do AuditAspect tenha
+ * acesso ao contexto de request durante a interceptação.
  *
- * Usa RANDOM_PORT + TestRestTemplate para fazer requisições HTTP reais,
- * o que é necessário para que o RequestContextHolder (usado pelo AuditAspect
- * para capturar IP e endpoint) esteja disponível durante o teste.
+ * Não requer Docker nem banco externo — roda com ./mvnw test normalmente.
  */
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-@Testcontainers
+@ActiveProfiles("test")
 class AuditAspectTest {
-
-    // Container estático: sobe uma única vez para toda a classe de testes
-    @Container
-    static PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:16-alpine")
-            .withDatabaseName("pix_auditoria_test")
-            .withUsername("test")
-            .withPassword("test");
-
-    // Sobrescreve as propriedades de datasource com os dados do container
-    @DynamicPropertySource
-    static void configurarPropriedades(DynamicPropertyRegistry registry) {
-        registry.add("spring.datasource.url", postgres::getJdbcUrl);
-        registry.add("spring.datasource.username", postgres::getUsername);
-        registry.add("spring.datasource.password", postgres::getPassword);
-    }
 
     @Autowired
     private TestRestTemplate restTemplate;
@@ -54,7 +31,6 @@ class AuditAspectTest {
     @Autowired
     private AuditLogRepository auditLogRepository;
 
-    // Limpa a tabela de auditoria antes de cada teste para garantir isolamento
     @BeforeEach
     void limparAuditLog() {
         auditLogRepository.deleteAll();
@@ -62,7 +38,6 @@ class AuditAspectTest {
 
     @Test
     void deveRegistrarLogAoCriarTransferenciaValida() {
-        // Given
         String body = """
                 {
                     "chaveOrigem": "11111111111",
@@ -75,7 +50,6 @@ class AuditAspectTest {
         headers.setContentType(MediaType.APPLICATION_JSON);
         headers.setBasicAuth("admin", "admin");
 
-        // When
         restTemplate.exchange(
                 "/api/pix/transferencias",
                 HttpMethod.POST,
@@ -83,16 +57,15 @@ class AuditAspectTest {
                 String.class
         );
 
-        // Then — AOP deve ter salvo o log mesmo que a operação seja bem-sucedida
         List<AuditLog> logs = auditLogRepository.findAll();
         assertThat(logs).isNotEmpty();
-        assertThat(logs.getFirst().getOperacao()).isEqualTo("criarTransferencia");
-        assertThat(logs.getFirst().getEntidadeAfetada()).isEqualTo("PixTransferencia");
+        assertThat(logs.get(0).getOperacao()).isEqualTo("criarTransferencia");
+        assertThat(logs.get(0).getEntidadeAfetada()).isEqualTo("PixTransferencia");
     }
 
     @Test
     void deveRegistrarLogMesmoQuandoServiceLancaExcecao() {
-        // Given — chaves iguais causam TransferenciaInvalidaException
+        // Chaves iguais causam TransferenciaInvalidaException no Service
         String body = """
                 {
                     "chaveOrigem": "mesma",
@@ -105,7 +78,6 @@ class AuditAspectTest {
         headers.setContentType(MediaType.APPLICATION_JSON);
         headers.setBasicAuth("admin", "admin");
 
-        // When — requisição retorna 400, mas o bloco finally do Aspect ainda executa
         ResponseEntity<String> response = restTemplate.exchange(
                 "/api/pix/transferencias",
                 HttpMethod.POST,
@@ -113,21 +85,19 @@ class AuditAspectTest {
                 String.class
         );
 
-        // Then — log deve existir mesmo com a operação tendo falhado
+        // Operação falhou mas o log deve existir (bloco finally do Aspect)
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-
         List<AuditLog> logs = auditLogRepository.findAll();
         assertThat(logs).isNotEmpty();
-        assertThat(logs.getFirst().getOperacao()).isEqualTo("criarTransferencia");
+        assertThat(logs.get(0).getOperacao()).isEqualTo("criarTransferencia");
     }
 
     @Test
     void deveRegistrarLogAoBuscarTransferenciaPorId() {
-        // Given — busca com UUID inexistente (404), mas o log ainda deve ser gerado
+        // UUID inexistente → 404, mas o log ainda deve ser criado
         HttpHeaders headers = new HttpHeaders();
         headers.setBasicAuth("admin", "admin");
 
-        // When
         restTemplate.exchange(
                 "/api/pix/transferencias/00000000-0000-0000-0000-000000000000",
                 HttpMethod.GET,
@@ -135,15 +105,13 @@ class AuditAspectTest {
                 String.class
         );
 
-        // Then
         List<AuditLog> logs = auditLogRepository.findAll();
         assertThat(logs).isNotEmpty();
-        assertThat(logs.getFirst().getOperacao()).isEqualTo("buscarPorId");
+        assertThat(logs.get(0).getOperacao()).isEqualTo("buscarPorId");
     }
 
     @Test
     void deveSalvarIpEEndpointNoLog() {
-        // Given
         String body = """
                 {
                     "chaveOrigem": "aaa",
@@ -156,7 +124,6 @@ class AuditAspectTest {
         headers.setContentType(MediaType.APPLICATION_JSON);
         headers.setBasicAuth("admin", "admin");
 
-        // When
         restTemplate.exchange(
                 "/api/pix/transferencias",
                 HttpMethod.POST,
@@ -164,11 +131,10 @@ class AuditAspectTest {
                 String.class
         );
 
-        // Then — valida que IP e endpoint foram capturados
         List<AuditLog> logs = auditLogRepository.findAll();
         assertThat(logs).isNotEmpty();
 
-        AuditLog log = logs.getFirst();
+        AuditLog log = logs.get(0);
         assertThat(log.getIp()).isNotBlank();
         assertThat(log.getEndpoint()).contains("/api/pix/transferencias");
     }
